kustomize/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-java-app
  name: demo-java-app
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: demo-java-app
  type: ClusterIP
