kustomize/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-java-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - demo-java-app.renovate-talk.pietervincken.com
      secretName: tls
  rules:
    - host: demo-java-app.renovate-talk.pietervincken.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-java-app
                port:
                  name: http
